# GameEngine

./: .clang-tidy  .gitignore  .gitmodules  App.cpp  App.hpp  Buffers.hpp  CMakeLists.txt  CMakePresets.json  Cache.hpp  GLShader.hpp  GLimpl.cpp  MeshObject.cpp  Renderer.cpp  Renderer.hpp  Utils.cmake  Window.cpp  Window.hpp  Window_GLFW.cpp  conanfile.txt  install.sh  main.cpp
Examples/TestDLL/: CMakeLists.txt  main.cpp
Examples/TriangleApp/: CMakeLists.txt  main.cpp
Source/: CMakeLists.txt  GameFramework.cpp  GameFramework.hpp  GameFramework_def.h  assets.cmake
Source/App/: App.h  CMakeLists.txt  Game.hpp  dllmain.cpp  triangle.vert
Source/Application/: App.cpp  App.hpp  CMakeLists.txt  ObjectsContainer.hpp  Scene.hpp  Scene3D.hpp
Source/Core/: CMakeLists.txt  Formatter.hpp  Logging.hpp  LoggingAPI.h  StaticString.hpp  Storage.hpp  TypeMapping.hpp  Utility.hpp
Source/Core/Tests/: CMakeLists.txt  Test_StaticString.cpp  Test_Storage.cpp
Source/DummyApp/: CMakeLists.txt  dllmain.cpp
Source/EngineLib/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.hpp
Source/EngineLib/Core/: Logging.hpp  Storage.hpp
Source/EngineLib/Rendering/: RenderingSystem.hpp  Swapchain.hpp
Source/EngineLib/Rendering/VulkanImpl/: MeshPipeline.cpp  Renderer.cpp  Renderer.hpp  (+5 more)
Source/Framework/: CMakeLists.txt  Renderer.hpp  StreamProcessor.hpp  Window.hpp
Source/Framework/include/: App.hpp  ResourceManager.hpp
Source/Framework/source/: Renderer.cpp  Window.cpp
Source/GameFramework/: CMakeLists.txt  DrawTool.hpp  GameAPI.hpp  GameFramework.cpp  GameFramework.hpp  GameFramework_def.h  Rendering.hpp  Resources.hpp
Source/GameFramework/Assets/: Asset.cpp  Asset.hpp  AssetSlot.cpp  AssetSlot.hpp  AssetsRegistry.cpp  AssetsRegistry.hpp  Utils.cpp  Utils.hpp
Source/GameFramework/Core/: StaticString.hpp  StringUtils.hpp  Utility.hpp
Source/GameFramework/Files/: DirectoryMountPoint.cpp  FileManager.cpp  FileManager.hpp  FileStream.hpp  MountPoint.hpp  StandardFileStream.cpp
Source/GameFramework/Game/: Input.cpp  Input.hpp  InputBinding.cpp  InputBinding.hpp  InputController.cpp  InputController.hpp  InputDevice.hpp  InputQueue.cpp  InputQueue.hpp  Math.hpp  Signal.cpp  Signal.hpp  Time.cpp  Time.hpp
Source/GameFramework/GameInstance/: GameAPI.h  GameInstance.cpp  GameLibrary.cpp  GameLibrary.hpp
Source/GameFramework/Input/: AxisProcessor.cpp  BindingParser.cpp  BindingParser.hpp  ButtonProcessor.cpp  Input.hpp  InputBackend.hpp  InputBinding.cpp  InputBinding.hpp  InputController.cpp  InputController.hpp  InputDevice.cpp  InputDevice.hpp  InputProcessor.hpp  InputQueue.cpp  InputQueue.hpp
Source/GameFramework/Plugin/: Plugin.cpp  Plugin.hpp
Source/GameFramework/PluginInterfaces/: DrawToolPlugin.hpp  GamePlugin.cpp  GamePlugin.hpp  RenderPlugin.hpp  WindowPlugin.hpp  WindowsPlugin.hpp
Source/GameFramework/Render/: Color.hpp  Material.hpp  RenderPrimitive.hpp  Scene2d.hpp  Scene3d.hpp
Source/GameFramework/Resources/: Resource.hpp  ResourceLoader.hpp  StaticMesh.cpp  StaticMesh.hpp
Source/GameFramework/Tests/: CMakeLists.txt  Test_Files.cpp  Test_StaticString.cpp  Test_Storage.cpp
Source/GameFramework/Utility/: Formatter.hpp  Random.hpp  StaticString.hpp  Storage.hpp  StringUtils.hpp  TypeMapping.hpp  Utility.hpp  Uuid.cpp  Uuid.hpp
Source/GameSystems/: CMakeLists.txt  GameSystems.cpp  GameSystems.hpp  GameSystems_def.h
Source/GameSystems/GameInstance/: GameInstance.cpp  GameInstance.hpp  GameLibrary.cpp  GameLibrary.hpp
Source/Games/: GameInstance.cpp  GameLibrary.cpp
Source/GlfwWindowPlugin/: CMakeLists.txt  GlfwInput.cpp  GlfwInput.hpp  GlfwInstance.cpp  GlfwInstance.hpp  GlfwWindow.cpp  GlfwWindow.hpp  dllmain.cpp
Source/Graphics/: CMakeLists.txt  GraphicsSystem.hpp  dllmain.cpp
Source/Graphics/RHI/: CMakeLists.txt  Context.hpp
Source/Graphics/Shaders/: triangle.frag  triangle.vert  triangle_frag.spv
Source/Graphics/include/: Graphics.h  Scene.h
Source/IO/: CMakeLists.txt  Window.h
Source/IO/Impl_1/: CMakeLists.txt
Source/Impl/SDL/: Application.cpp  DrawTool.cpp
Source/Input/: CMakeLists.txt
Source/Input/GLFW_impl/: CMakeLists.txt  Window.cpp
Source/Launcher/: CMakeLists.txt  GlfwInput.cpp  GlfwInput.hpp  GlfwInputBinding.cpp  GlfwInputBinding.hpp  GlfwInstance.cpp  GlfwInstance.hpp  GlfwWindow.cpp  IWindow.hpp  Launcher.cpp  Launcher.hpp  Launcher_def.h  OwnedBy.hpp  Process.cpp  Process.hpp  ShaderCompile.cmake  main.cpp
Source/Launcher/Games/: GameInstance.hpp  GameLibrary.hpp
Source/Launcher/SDL/: Window.cpp  Window.hpp
Source/PlatformSpecificLayer/SDL/: DrawTool.cpp  DrawTool.hpp  Window.cpp  Window.hpp
Source/RenderPlugin_RHI/: CMakeLists.txt  InternalDeviceInterface.hpp  Scene2D.cpp  Scene2D.hpp  Scene2DProxy.cpp  Scene2DProxy.hpp  Scene2D_CPU.cpp  Scene2D_GPU.cpp  Scene2D_GPU.hpp  ScreenDevice.cpp  ScreenDevice.hpp  ShaderFile.cpp  ShaderFile.hpp  ShadersMountPoint.cpp  ShadersMountPoint.hpp  dllmain.cpp
Source/RenderPlugin_RHI/Render2D/: Scene2D_CPU.cpp  Scene2D_CPU.hpp  Scene2D_GPU.cpp  Scene2D_GPU.hpp
Source/RenderPlugin_RHI/Render3D/: RenderData.hpp  Scene3D_CPU.cpp  Scene3D_CPU.hpp  Scene3D_GPU.cpp  Scene3D_GPU.hpp
Source/RenderPlugin_RHI/Renderer/: BackgroundRenderer.cpp  BackgroundRenderer.hpp  Rect2dRenderer.cpp  Rect2dRenderer.hpp
Source/RenderPlugin_RHI/Utility/: Constants.hpp  MaterialResolver.cpp  MaterialResolver.hpp  ShaderFile.cpp
Source/Rendering/: CMakeLists.txt  Rendering.h  RenderingSystem.h  RenderingSystem.hpp  Scene.h
Source/Rendering/AssetLoader/: AssetLoader.hpp  CMakeLists.txt
Source/Rendering/GL_impl/: CMakeLists.txt
Source/Rendering/VulkanImpl/: MemoryManager.cpp  MemoryManager.hpp  MeshPipeline.cpp  MeshPipeline.hpp  Renderer.cpp  Renderer.hpp  ShadersCompiler.hpp  Types.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanRendering.cpp
Source/Rendering/Vulkan_impl/: CMakeLists.txt
Source/TestDLL/: CMakeLists.txt  api.h  main.cpp
Source/deleted/: RenderingSystem.h
Source/deleted/VulkanImpl/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  Types.hpp  VulkanContext.cpp  VulkanContext.hpp
(+95 files in other folders)
